404 and 500 with correct path to home

--- a/public/404.html
+++ b/public/404.html
@@ -15,7 +15,7 @@
       <h1 style="color:#234C63;font-size:18px;text-align:center;"">Bollocks! Something went wrong...</h1>
     </div>
   <div style="text-align:center;"> <img src="404_cocas.jpeg" alt="404_cocas" style="max-width:200px;max-height:150px;border-radius:10%;"></div>
-  <a href="../www.betfriendsforever.co.uk" style="color:#00C522;"><h2 style="color:#00C522;font-size:16px;text-align:center;">Let's go this way instead</h2></a>
+  <a href="/" style="color:#00C522;"><h2 style="color:#00C522;font-size:16px;text-align:center;">Let's go this way instead</h2></a>
   </div>
   </div>
   </div>
